OPTIMUS-36426 export changes from 4d112da77bfdfeca7cf6609173c13c38cf3a798e